--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,10 +1,13 @@
 pipeline {
-  agent {
-    docker { image 'node:latest' }
-  }
+  agent any
+
   stages {
     stage('Install') {
-      steps { sh 'npm install' }
+      steps { 
+        sh "apk add nodejs"
+        sh "echo $PATH"
+        sh "npm install"
+      }
     }
 
     stage('Test') {
